[gd_scene load_steps=6 format=3 uid="uid://cmnwa5qvdh4iu"]

[ext_resource type="Texture2D" uid="uid://dwdu0xb4gsot2" path="res://Assets/tiny_ship4.png" id="1_h5jkt"]
[ext_resource type="Script" uid="uid://dird5t3iygpoo" path="res://Scripts/player_teste.gd" id="1_mlrf6"]
[ext_resource type="AudioStream" uid="uid://cdat61efo5tpv" path="res://audio/effects/teste.mp3" id="3_mlrf6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h5jkt"]
radius = 3.65948

[sub_resource type="CircleShape2D" id="CircleShape2D_mlrf6"]
radius = 6.73133

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(2.026, 2)
collision_mask = 2
script = ExtResource("1_mlrf6")

[node name="Nave" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_h5jkt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.96046e-08, -6.82121e-13)
rotation = 1.5708
scale = Vector2(1.77588, 3.14355)
shape = SubResource("CircleShape2D_h5jkt")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(20, 0)
scale = Vector2(-1.28245, 3.6704)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mlrf6")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -2700
limit_top = -2700
limit_right = 2700
limit_bottom = 2700

[node name="Hurtbox" type="Area2D" parent="." groups=["player"]]
scale = Vector2(1.11021, 1.06818)
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
position = Vector2(0.444584, 0)
scale = Vector2(3.72283, 5.06563)
polygon = PackedVector2Array(-2.8, 3, -2.8, -3, 0, -1.3, 2.8, 0, 0, 1.3)

[node name="Xp_Attractor" type="Area2D" parent="." groups=["player"]]

[node name="Xp_AttractZone" type="CollisionShape2D" parent="Xp_Attractor"]
position = Vector2(-1.48075, 1.5)
scale = Vector2(5, 5)
shape = SubResource("CircleShape2D_mlrf6")

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Xp_Attractor" to="." method="_on_xp_magnet_area_entered"]
